RESOLVED FIXED114561
REGRESSION(r148128): window.resizeTo doesn't work from Safari address bar.
https://bugs.webkit.org/show_bug.cgi?id=114561
Summary REGRESSION(r148128): window.resizeTo doesn't work from Safari address bar.
Andreas Kling
Reported 2013-04-13 04:50:18 PDT
Attachments
Proposed patch (4.15 KB, patch)
2013-04-13 07:11 PDT, Andreas Kling
sam: review+
Andreas Kling
Comment 1 2013-04-13 07:11:14 PDT
Created attachment 197936 [details] Proposed patch
Alexey Proskuryakov
Comment 2 2013-04-13 19:38:18 PDT
Comment on attachment 197936 [details] Proposed patch View in context: https://bugs.webkit.org/attachment.cgi?id=197936&action=review > Source/WebCore/ChangeLog:13 > + (WebCore::DOMWindow::canChangeWindowGeometry): Drive-by comment: this looks like a "may" or "allowedTo" function, not a "can" one.
Sam Weinig
Comment 3 2013-04-14 15:45:44 PDT
Comment on attachment 197936 [details] Proposed patch View in context: https://bugs.webkit.org/attachment.cgi?id=197936&action=review Can this be tested? > Source/WebCore/page/DOMWindow.cpp:1449 > +bool DOMWindow::canChangeWindowGeometry() const I agree with Alexey, something like allowedToChangeWindowGeometry would be more clear. This could also use a comment.
Alexey Proskuryakov
Comment 4 2013-04-15 11:41:46 PDT
*** Bug 114445 has been marked as a duplicate of this bug. ***
Andreas Kling
Comment 5 2013-04-16 03:04:19 PDT
Note You need to log in before you can comment on or make changes to this bug.