REGRESSION(r148128): window.resizeTo doesn't work from Safari address bar. <rdar://problem/13635894> <http://webkit.org/b/114561>

Reviewed by Sam Weinig.

Suppressing window geometry changes while any user gesture is active was a bit too restrictive,
and broke legitimate use-cases. Narrow it down to checking EventHandler::mousePressed().

No test yet, adding one is tracked by <http://webkit.org/b/114561>.

* page/DOMWindow.cpp:
(WebCore::DOMWindow::allowedToChangeWindowGeometry):

    Added to share code between all DOMWindow functions that alter window geometry.

(WebCore::DOMWindow::moveBy):
(WebCore::DOMWindow::moveTo):
(WebCore::DOMWindow::resizeBy):
(WebCore::DOMWindow::resizeTo):

Canonical link: https://commits.webkit.org/133050@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148508 268f45cc-cd09-0410-ab3c-d52691b4dbfc